--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+.terraform
+.terragrunt-cache
+.terraform_backend
+
+backend.tf
+provider.tf
+
+# please include this lock file if you use this template
+.terraform.lock.hcl
+
+# Ignore ENV file
+.env
